--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.5",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
