--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
+    "react-scan": "^0.1.3",
     "react-svg": "^16.3.0"
   },
   "devDependencies": {
