--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
+    "gsap": "^3.13.0",
     "isbot": "^5.1.17",
     "lucide-react": "^0.545.0",
     "react": "^19.0.0",
