--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
     "react-scan": "^0.1.3",
-    "react-svg": "^16.3.0"
+    "react-svg": "^16.3.0",
+    "tailwind-scrollbar": "^4.0.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
