--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/react-router": "^1.2.3",
+    "@vercel/speed-insights": "^1.2.0",
     "gsap": "^3.13.0",
     "isbot": "^5.1.17",
     "lucide-react": "^0.545.0",
