--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tailwind-scrollbar": "^4.0.2"
   },
   "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.13.5",
     "@react-router/dev": "^7.1.5",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.5",
@@ -35,7 +36,8 @@
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.5",
     "typescript": "^5.7.2",
-    "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite": "^7.1.7",
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "^4.53.0"
   }
 }
