--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.10.1",
     "react-scan": "^0.1.3",
     "react-svg": "^16.3.0",
     "tailwind-scrollbar": "^4.0.2"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.13.5",
+    "@cloudflare/vite-plugin": "^1.17.0",
     "@react-router/dev": "^7.1.5",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.5",
@@ -36,7 +37,7 @@
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.5",
     "typescript": "^5.7.2",
-    "vite": "^7.1.7",
+    "vite": "^7.2.7",
     "vite-tsconfig-paths": "^5.1.4",
     "wrangler": "^4.53.0"
   }
