cloudflare agora vai 2

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,12 +1,17 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "my-portfolio",
-	"compatibility_date": "2025-12-02",
+	"compatibility_date": "2025-01-01",
+	"compatibility_flags": ["nodejs_compat"],
 	"main": "./workers/app.ts",
 	"vars": {
 		"VALUE_FROM_CLOUDFLARE": "Hello from Cloudflare"
 	},
 	"observability": {
 		"enabled": true
+	},
+	"pages_build_output_dir": "./build/client",
+	"assets": {
+		"directory": "./build/client"
 	}
 }
